--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "angular2-image-upload": "^1.0.0-rc.2",
     "angular2-uuid": "^1.1.1",
     "bootstrap": "^5.0.1",
+    "moment": "^2.29.1",
     "ngp-image-picker": "^1.2.6",
     "ngp-lazy-image": "0.0.6",
     "ngx-rating": "0.0.9",
@@ -37,7 +38,7 @@
     "node-sass": "^4.14.1",
     "resize-observer": "^1.0.0",
     "rxjs": "^6.5.5",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
