--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "@angular/platform-browser-dynamic": "^10.0.4",
     "@angular/router": "^10.0.4",
     "@ckeditor/ckeditor5-angular": "^1.2.3",
+    "@ng-select/ng-select": "5.1.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "angular2-image-upload": "^1.0.0-rc.2",
     "angular2-uuid": "^1.1.1",
     "bootstrap": "^5.0.1",
-    "moment": "^2.29.1",
     "material-design-icons": "^3.0.1",
+    "moment": "^2.29.1",
     "ngp-image-picker": "^1.2.6",
     "ngp-lazy-image": "0.0.6",
     "ngx-rating": "0.0.9",
