--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "moment": "^2.29.1",
     "ngp-image-picker": "^1.2.6",
     "ngp-lazy-image": "0.0.6",
+    "ngx-dropzone": "^3.0.0",
     "ngx-rating": "0.0.9",
     "ngx-spinner": "^9.0.2",
     "ngx-swiper-wrapper": "^9.0.1",
