--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "angular2-image-upload": "^1.0.0-rc.2",
+    "angular2-prettyjson": "^3.0.1",
     "angular2-uuid": "^1.1.1",
     "bootstrap": "^5.0.1",
     "material-design-icons": "^3.0.1",
