Creando vista de perfil de usuario y cambio de contrasenna

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -13,14 +13,12 @@
     "allowJs": true,
     "importHelpers": true,
     "target": "es2015",
-    "lib": [
-      "es2018",
-      "dom"
-    ]
+    "lib": ["es2018", "dom"]
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true,
     "allowJs": true,
+    "enableIvy": false
   }
 }
