--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -2,17 +2,12 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
-    "types": [
-      "jasmine",
-      "node"
-    ]
+    "types": ["jasmine", "node"]
   },
-  "files": [
-    "src/test.ts",
-    "src/polyfills.ts"
-  ],
+  "files": ["src/test.ts", "src/polyfills.ts"],
   "include": [
     "src/**/*.spec.ts",
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+    "src/app/stock-modules/classifiers/move-status/components/inventory-state-form/move-status-form.component.ts"
   ]
 }
