--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@angular/core": "^10.0.4",
     "@angular/flex-layout": "^9.0.0-beta.31",
     "@angular/forms": "^10.0.4",
+    "@angular/localize": "^10.0.4",
     "@angular/material": "^10.1.0",
     "@angular/platform-browser": "^10.0.4",
     "@angular/platform-browser-dynamic": "^10.0.4",
     "@angular/router": "^10.0.4",
     "@ckeditor/ckeditor5-angular": "^1.2.3",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.0",
     "@ng-select/ng-select": "5.1.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
@@ -30,9 +32,11 @@
     "angular2-prettyjson": "^3.0.1",
     "angular2-uuid": "^1.1.1",
     "bootstrap": "^5.0.1",
+    "chart.js": "^3.5.0",
     "mat-timepicker": "^5.1.4",
     "material-design-icons": "^3.0.1",
     "moment": "^2.29.1",
+    "ng2-charts": "^3.0.0-rc.4",
     "ngp-image-picker": "^1.2.6",
     "ngp-lazy-image": "0.0.6",
     "ngx-dropzone": "^3.0.0",
