creacion pdf paciente e instalcion jspdf

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "angular2-uuid": "^1.1.1",
     "bootstrap": "^5.0.1",
     "chart.js": "^3.5.0",
+    "jspdf": "^2.3.1",
     "mat-timepicker": "^5.1.4",
     "material-design-icons": "^3.0.1",
     "moment": "^2.29.1",
